--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Base React App</title>
 </head>
-<body style="margin: 0px">
+<body style="margin: 0px; background-color: rgba(0,0,0,0.95); color: white">
   <div id="root"></div>
 </body>
 </html>
